--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mind-scribe-speech-flow</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:title" content="mind-scribe-speech-flow" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>MindEcho</title>
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
